# publications

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  utils.py
CGAN/: README.md  results.csv
G-SMOTE/: README.md
SOMO/: README.md  experiment.ipynb
cgan/: README.md  README.rst  results.csv
cgan-journal/: README.rst
cluster-over-sampling/: README.rst
cluster-over-sampling-a-package-for-clustering-based-oversampling/: README.md  pyproject.toml  session_store.db
cluster-over-sampling-a-package-for-clustering-based-oversampling/notebooks/: manuscript.qmd
cluster-over-sampling-a-package-for-clustering-based-oversampling/notebooks/manuscript/: manuscript.qmd  references.bib
cluster-over-sampling-a-package-for-clustering-based-oversampling/tests/: test_run.py
cluster-over-sampling-a-package-for-clustering-based-oversampling/tests/pipelines/: test_data_science.py
data/: pima.csv
effective-data-generation-for-imbalanced-learning-using-conditional-generative-adversarial-networks/: pyproject.toml
g-somo-an-oversampling-approach-based-on-self-organized-maps-and-geometric-smote/: README.md
genetic-programming-for-offline-reinforcement-learning-data-collection/: README.md  pyproject.toml  requirements.txt
geometric-smote-a-geometrically-enhanced-drop-in-replacement-for-smote/: pyproject.toml
geometric-smote-a-package-for-flexible-and-efficient-oversampling/: README.md
geometric-smote-for-regression/: pyproject.toml
gsmote/: README.md
gsmote-journal/: README.rst  gsmote_journal.py
gsmote-preprint/: README.rst
gsomo/: README.rst
imbalanced-learning/: README.rst
imbalanced-learning-in-land-cover-classification-improving-minority-classes-prediction-accuracy-using-the-geometric-smote-algorithm/: README.md
imbalanced-text-classification-using-geometric-smote-oversampling-algorithm/: README.md  (+1 more)
improving-imbalanced-learning-through-a-heuristic-oversampling-method-based-on-k-means-and-smote/: README.md  pyproject.toml
improving-imbalanced-learning-through-a-heuristic-oversampling-method-based-on-k-means-and-smote/docs/source/: index.rst
improving-imbalanced-learning-through-a-heuristic-oversampling-method-based-on-k-means-and-smote/tests/: test_run.py
improving-imbalanced-learning-through-a-heuristic-oversampling-method-based-on-k-means-and-smote/tests/pipelines/: test_data_science.py
published-work/imbalanced-learning-in-land-cover-classification-improving-minority-classes-prediction-accuracy-using-the-geometric-smote-algorithm/: README.md  pyproject.toml
published-work/imbalanced-learning-in-land-cover-classification-improving-minority-classes-prediction-accuracy-using-the-geometric-smote-algorithm/docs/source/: index.rst
published-work/imbalanced-learning-in-land-cover-classification-improving-minority-classes-prediction-accuracy-using-the-geometric-smote-algorithm/src/pub/: __init__.py  __main__.py
published-work/improving-imbalanced-land-cover-classification-with-k-means-smote-detecting-and-oversampling-distinctive-minority-spectral-signatures/: README.md  pyproject.toml
published-work/improving-imbalanced-land-cover-classification-with-k-means-smote-detecting-and-oversampling-distinctive-minority-spectral-signatures/conf/: logging.yml
published-work/improving-imbalanced-land-cover-classification-with-k-means-smote-detecting-and-oversampling-distinctive-minority-spectral-signatures/docs/source/: conf.py  index.rst
published-work/improving-imbalanced-land-cover-classification-with-k-means-smote-detecting-and-oversampling-distinctive-minority-spectral-signatures/src/pub/: __main__.py
published-work/self-organizing-map-oversampling-somo-for-imbalanced-data-set-learning/: README.md  pyproject.toml
published-work/self-organizing-map-oversampling-somo-for-imbalanced-data-set-learning/conf/: logging.yml
published-work/self-organizing-map-oversampling-somo-for-imbalanced-data-set-learning/docs/source/: conf.py
published-work/self-organizing-map-oversampling-somo-for-imbalanced-data-set-learning/src/pub/: __init__.py  __main__.py
published-work/self-organizing-map-oversampling-somo-for-imbalanced-data-set-learning/src/self_organizing_map_oversampling_somo_for_imbalanced_data_set_learning/: __main__.py
sports-betting-beating-the-bookmakers-with-machine-learning/: README.md  pyproject.toml
sports-betting-beating-the-bookmakers-with-machine-learning/conf/: logging.yml
sports-betting-beating-the-bookmakers-with-machine-learning/docs/source/: conf.py  index.rst
sports-betting-beating-the-bookmakers-with-machine-learning/src/sports_betting_beating_the_bookmakers_with_machine_learning/: __init__.py  __main__.py
sports-betting-beating-the-bookmakers-with-machine-learning/tests/: test_run.py
sports-betting-beating-the-bookmakers-with-machine-learning/tests/pipelines/: test_data_science.py
work-in-progress/imbalanced-text-classification-using-geometric-smote-oversampling-algorithm/: README.md  pyproject.toml
work-in-progress/imbalanced-text-classification-using-geometric-smote-oversampling-algorithm/docs/source/: index.rst
work-in-progress/imbalanced-text-classification-using-geometric-smote-oversampling-algorithm/src/imbalanced_text_classification_using_geometric_smote_oversampling_algorithm/: __init__.py  __main__.py
work-in-progress/imbalanced-text-classification-using-geometric-smote-oversampling-algorithm/src/pub/: __main__.py
work-in-progress/intraday-trading-via-deep-reinforcement-learning-and-technical-indicators/: README.md  manuscript.qmd  pyproject.toml
work-in-progress/intraday-trading-via-deep-reinforcement-learning-and-technical-indicators/conf/: logging.yml
work-in-progress/intraday-trading-via-deep-reinforcement-learning-and-technical-indicators/docs/source/: index.rst
work-in-progress/intraday-trading-via-deep-reinforcement-learning-and-technical-indicators/src/intraday_trading_via_deep_reinforcement_learning_and_technical_indicators/: __main__.py
work-in-progress/intraday-trading-via-deep-reinforcement-learning-and-technical-indicators/src/pub/: __main__.py
(+694 files in other folders)
