[project]
name = "novapubs"
version = "0.0.1"
description = "Tools to reproduce various publications of the NOVA IMS Innovation and Analytics Lab."
authors = [
    {name = "Georgios Douzas", email = "gdouzas@icloud.com"},
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "mlflow>=1.25.1",
    "click>=8.1.3",
]
[project.optional-dependencies]
gsmote-is = [
    "scikit-learn>=1.0.0",
    "geometric-smote>=0.2.0",
    "research-learn>=0.3.1",
    "imbalanced-learn>=0.8.0",
]
manuscript-format = [
    "pandas>=1.4.2",
]
datasets-imbalanced-binary = [
    "xlrd>=1.0.0",
    "requests>=2.27.1",
    "pandas>=1.4.2",
    "imbalanced-learn>=0.8.0"
]
[project.scripts]
create = "tools.cli:create"
datasets = "tools.cli:datasets"
experiment = "tools.cli:experiment"
manuscript = "tools.cli:manuscript"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
code-format = [
    "black>=22.3.0",
]
code-analysis = [
    "flake8>=4.0.1",
    "pylint>=2.13.8",
]
[tool.pdm.scripts]
code-format = "black -S tools projects"
code-analysis = {shell = "flake8 tools projects --max-line-length=95 --extend-ignore=E203,E741 && pylint -E tools projects -d E1103,E0611,E1101"}
ui = "mlflow ui"

