[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "self_organizing_map_oversampling_somo_for_imbalanced_data_set_learning"
readme = "README.md"
dynamic = ["dependencies", "version"]

[project.scripts]
self-organizing-map-oversampling-somo-for-imbalanced-data-set-learning = "self_organizing_map_oversampling_somo_for_imbalanced_data_set_learning.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.18.0",
    "sphinx~=3.4.3",
    "sphinx_rtd_theme==0.5.1",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.11.1",
    "sphinx_copybutton==0.3.1",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.1.0",
    "myst-parser~=0.17.2",
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "self_organizing_map_oversampling_somo_for_imbalanced_data_set_learning.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "self_organizing_map_oversampling_somo_for_imbalanced_data_set_learning"
project_name = "self-organizing-map-oversampling-somo-for-imbalanced-data-set-learning"
kedro_init_version = "0.19.1"
tools = ['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'Kedro Viz']
example_pipeline = "True"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/self_organizing_map_oversampling_somo_for_imbalanced_data_set_learning -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Black takes care of line-too-long
