[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "intraday_trading_via_deep_reinforcement_learning_and_technical_indicators"
readme = "README.md"
dynamic = ["dependencies", "version"]

[project.scripts]
intraday-trading-via-deep-reinforcement-learning-and-technical-indicators = "intraday_trading_via_deep_reinforcement_learning_and_technical_indicators.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.18.0",
    "sphinx~=3.4.3",
    "sphinx_rtd_theme==0.5.1",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.11.1",
    "sphinx_copybutton==0.3.1",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.1.0",
    "myst-parser~=0.17.2",
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "intraday_trading_via_deep_reinforcement_learning_and_technical_indicators.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "intraday_trading_via_deep_reinforcement_learning_and_technical_indicators"
project_name = "intraday-trading-via-deep-reinforcement-learning-and-technical-indicators"
kedro_init_version = "0.19.1"
tools = ['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure', 'Kedro Viz']
example_pipeline = "True"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/intraday_trading_via_deep_reinforcement_learning_and_technical_indicators -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 88
show-fixes = true
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Black takes care of line-too-long
